# thing-sdk

./: Cargo.toml
lib-thing/: Cargo.toml
lib-thing/src/: error.rs  lib.rs
thing-go/: Cargo.toml  Makefile
thing-go/sdk/: .gitignore  go.mod  go.sum
thing-go/sdk/src/: hello.go
thing-go/src/: lib.rs
thing-py/: Cargo.toml  Makefile  build-run.sh  pyproject.toml  setup.sh  test.py
thing-py/src/: lib.rs
