[package]
name = "lib-thing"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.46.0", default-features = false, features = [
    "zip_with",
    # not supported in WASM
    # "fmt",
    "temporal",
    "dtype-slim",
    "docs",
    "csv",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
polars = { version = "0.46.0", default-features = true }
